deployment/monitoring/base/ha-servicemonitor.yaml
kind: Service
apiVersion: v1
metadata:
  name: ha-service
  namespace: monitor
  labels:
    app: ha-service
spec:
  type: ExternalName
  externalName: ha.michaelgoldstein.co
---
kind: Endpoints
apiVersion: v1
metadata:
  name: ha-service
  namespace: monitor
subsets:
  - addresses:
    - ip: 192.168.13.14
    ports:
    - name: https
      port: 443
      protocol: TCP
