deployment/monitoring/base/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: monitor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.michaelgoldstein.co`)
      services:
        - name: prometheus-grafana
          port: 80
  tls:
    secretName: letsencrypt-prod-cert
