deployment/monitoring/base/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.michaelgoldstein.co`) &&  (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: letsencrypt-prod-cert
